--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <title>Travel Blog</title>
     <meta name="description" content="A blog website about travelling">
-    <meta name="author" content="Madhur Taneja">
+    <meta name="author" content="Kirthik D">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
 
 </head>
@@ -18,40 +18,40 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="#" class="logo">Nomadic Madhur</a>
+        <a href="#" class="logo">Kirthik D</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="#" class="nav-links">Home</a>
             </li>
             <li>
-                <a href="pages/AboutUsComponent.html" class="nav-links">About Us</a>
+                <a href="AboutUsComponent.html" class="nav-links">About Us</a>
             </li>
             <li>
-                <a href="pages/BlogsComponent.html" class="nav-links">Blogs</a>
+                <a href="BlogsComponent.html" class="nav-links">Blogs</a>
             </li>
         </ul>
     </nav>
 
     <div class="container">
         <div>
-            <img src="images/cover.jpg" class="cover"/>
+            <img src="../images/cover.jpg" class="cover"/>
         </div>
 
-        <!-- Destination 1 -->
+        <!-- place 1 -->
         <div class="destinations-container">
             <div>
                 <figure>
-                    <img src="images/mountains.jpg" class="destinations" alt="Destinations"/>
+                    <img src="../images/mountains.jpg" class="destinations" alt="Destinations"/>
                     <figcaption>Fig.1 - Coorg, Karnataka, India.</figcaption>
                 </figure>
             </div>
             <div class="caption">
                 <h5>Mountains</h5>
-                <p>Everybody wants to reach the peak, but there is no growth on the top of a mountain. It is in the valley that we slog through the lush grass and rich soil, learning and becoming what enables us to summit life’s next peak. That's why mountains are always my favorite destinations.</p>
+                <p>Everybody wants to reach the peak, but there is no growth on the top of a mountain. It is in the valley that we slog through the lush grass and rich soil, learning and becoming what enables us to summit life’s next peak. That's why mountains are always my favorite places.</p>
             </div>
         </div>
 
-        <!-- Destination 2 -->
+        <!-- Place 2 -->
         <div class="destinations-container">
             <div class="caption">
                 <h5>Beaches</h5>
@@ -59,7 +59,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="images/beaches.jpg" class="destinations" alt="Destinations"/>
+                    <img src="../images/beaches.jpg" class="destinations" alt="Destinations"/>
                     <figcaption>Fig.2- Goa, India</figcaption>
                 </figure>
             </div>
@@ -69,7 +69,7 @@
     <div class="clear-div"></div>
 
     <footer class="footer">
-        <p class="footer-content">© 2020 - Madhur Taneja, All Copyrights Reserved</p>
+        <p class="footer-content">© 2022 - Kirthik D, All Copyrights Reserved</p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
